<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.fcmexample.SendNotificationVM" />

        <variable
            name="onSendClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="onBackClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".SendActivity">

        <TextView
            android:id="@+id/tvSelectType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_data_notification"
            app:layout_constraintBottom_toTopOf="@id/edtTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.sendDataMessage}"
            app:layout_constraintBottom_toBottomOf="@id/tvSelectType"
            app:layout_constraintLeft_toRightOf="@id/tvSelectType"
            app:layout_constraintTop_toTopOf="@id/tvSelectType" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.title}"
            android:hint="@string/title"
            app:layout_constraintBottom_toTopOf="@id/edtBody"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSelectType" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.body}"
            android:hint="@string/body"
            app:layout_constraintBottom_toTopOf="@id/edtTopic"
            app:layout_constraintLeft_toLeftOf="@id/btnSend"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.topic}"
            android:hint="@string/topic"
            app:layout_constraintBottom_toTopOf="@id/btnSend"
            app:layout_constraintLeft_toLeftOf="@id/btnSend"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtBody" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:onClick="@{onSendClick}"
            app:layout_constraintBottom_toTopOf="@id/btnBack"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtTopic" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="@{onBackClick}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSend" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>